[workspace]
default-members = ["crates/rust_lib"]
members = [ "crates/gd_lz4","crates/gd_glicol", "crates/rust_lib"]
resolver = "1"

[workspace.package]
version = "0.13.5"
edition = "2021"

[workspace.dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
	"api-custom",
] }

[profile.release]
opt-level = 's' # Optimize for size.
lto = true      # Enable Link Time Optimization
# codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = 'abort'   # Abort on panic
