[package]
name = "glicol"
version = { workspace = true }
edition = { workspace = true }
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]

license-file = "LICENSE"
description = "Glicol language main entry point."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-samples = []
use-meta = []
bela = []

[dependencies]
glicol_parser = { path = "../glicol_parser" }
glicol_synth = { path = "../glicol_synth", features = [
	"use-samples",
	"use-meta",
] }
petgraph = { version = "0.6", features = ["stable_graph"] }
hashbrown = "0.14.3"
pest = "2.7.9"
lcs-diff = "0.1.1"

[dev-dependencies]
gnuplot = "0.0.37"
# petgraph = { version = "0.6",  features = ["stable_graph"] }
cpal = "0.14.0"
anyhow = "1.0.63"
