[package]
name = "glicol_lib"
version = "0.1.0"
authors = ["Luo Zhihao <luo_zhihao_jx@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
glicol = { path = "../glicol", features = ["use-samples", "use-meta"] }

[profile.release]
# opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
# codegen-units = 1 # Reduce number of codegen units to increase optimizations.
# panic = 'abort'   # Abort on panic
