[package]
name = "glicol_parser"
version = { workspace = true }
edition = { workspace = true }
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]

license-file = "LICENSE"
description = "Parser for Glicol language."
repository = "https://github.com/chaosprint/glicol.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glicol_synth = { path = "../glicol_synth" }
hashbrown = "0.14.3"
fasteval = "0.2.4"
pest = "2.7.9"
pest_derive = "2.7.9"
