[package]
name = "glicol_synth"
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]
readme = "README.md"
license-file = "LICENSE"
description = "A graph-based music DSP library written in Rust"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["node-boxed", "node-pass", "node-sum"]
use-samples = ["node-sampling"]
use-meta = ["node-dynamic"]
node-boxed = []
node-pass = []
node-sampling = []
node-dynamic = ["rhai"]
node-sum = ["dasp_slice"]

[dependencies]
hashbrown = "0.14"
fasteval = "0.2"
petgraph = { version = "0.6", features = ["stable_graph"] }
dasp_slice = { optional = true, version = "0.11", default-features = false, features = [
	"std",
] }
dasp_ring_buffer = "0.11"
dasp_signal = "0.11"
dasp_interpolate = { version = "0.11", features = ["linear", "sinc"] }
arrayvec = "0.7"
rhai = { optional = true, version = "1.12", default-features = false, features = [
	"sync",
	"f32_float",
	"only_i32",
] }
lcs-diff = "0.1"
