[package]
name = "rust_lib"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { workspace = true }
gd_glicol = { path = "../gd_glicol" }
gd_lz4 = { path = "../gd_lz4" }
gd_qjs = { path = "../gd_qjs" }
